--- a/LevelUp/app/src/main/res/layout/fragment_home.xml
+++ b/LevelUp/app/src/main/res/layout/fragment_home.xml
@@ -112,7 +112,7 @@
                 android:id="@+id/materialCardView"
                 style="@style/CustomCardViewStyle"
                 android:layout_width="0dp"
-                android:layout_height="910dp"
+                android:layout_height="1140dp"
                 android:layout_marginTop="150dp"
                 android:layout_marginBottom="-72dp"
                 android:backgroundTint="@color/white"
@@ -124,7 +124,7 @@
 
                 <androidx.constraintlayout.widget.ConstraintLayout
                     android:layout_width="match_parent"
-                    android:layout_height="672dp" >
+                    android:layout_height="match_parent">
 
                     <TextView
                         android:id="@+id/recentproject"
@@ -145,6 +145,54 @@
                         android:layout_height="wrap_content"
                         app:layout_constraintStart_toStartOf="@+id/recentproject"
                         app:layout_constraintTop_toBottomOf="@+id/recentproject" />
+
+                    <androidx.cardview.widget.CardView
+                        android:id="@+id/cardView2"
+                        android:layout_width="0dp"
+                        android:layout_height="150dp"
+                        android:layout_marginTop="24dp"
+                        android:layout_marginEnd="16dp"
+                        android:backgroundTint="#FFFFFF"
+                        app:cardBackgroundColor="#FFFFFF"
+                        app:cardCornerRadius="15dp"
+                        app:layout_constraintEnd_toEndOf="parent"
+                        app:layout_constraintStart_toStartOf="@+id/RVrecentprojects"
+                        app:layout_constraintTop_toBottomOf="@+id/RVrecentprojects">
+
+                        <RelativeLayout
+                            android:layout_width="match_parent"
+                            android:layout_height="match_parent">
+
+                            <com.denzcoskun.imageslider.ImageSlider
+                                android:id="@+id/carouselnews"
+                                android:layout_width="match_parent"
+                                android:layout_height="match_parent"
+                                app:iss_auto_cycle="true"
+                                app:iss_delay="0"
+                                app:iss_period="1000" />
+                        </RelativeLayout>
+                    </androidx.cardview.widget.CardView>
+
+                    <TextView
+                        android:id="@+id/textView10"
+                        android:layout_width="wrap_content"
+                        android:layout_height="wrap_content"
+                        android:layout_marginTop="24dp"
+                        android:text="Discover"
+                        android:textColor="#000000"
+                        android:textSize="24sp"
+                        android:textStyle="bold"
+                        app:layout_constraintStart_toStartOf="@+id/cardView2"
+                        app:layout_constraintTop_toBottomOf="@+id/cardView2" />
+
+                    <androidx.recyclerview.widget.RecyclerView
+                        android:id="@+id/recyclerviewnews"
+                        android:layout_width="0dp"
+                        android:layout_height="500dp"
+                        app:layout_constraintEnd_toEndOf="parent"
+                        app:layout_constraintStart_toStartOf="parent"
+                        app:layout_constraintTop_toBottomOf="@+id/textView10" />
+
                 </androidx.constraintlayout.widget.ConstraintLayout>
             </com.google.android.material.card.MaterialCardView>
 
@@ -156,9 +204,6 @@
                 app:layout_constraintEnd_toEndOf="parent"
                 app:layout_constraintStart_toStartOf="parent"
                 app:layout_constraintTop_toTopOf="parent" />
-
         </androidx.constraintlayout.widget.ConstraintLayout>
     </ScrollView>
-
-
 </androidx.constraintlayout.widget.ConstraintLayout>
