--- a/LevelUp/app/src/main/res/layout/activity_reply_discussion.xml
+++ b/LevelUp/app/src/main/res/layout/activity_reply_discussion.xml
@@ -80,6 +80,7 @@
         app:layout_constraintTop_toBottomOf="@+id/cardView2" />
 
     <androidx.recyclerview.widget.RecyclerView
+        android:id="@+id/repliesrv"
         android:layout_width="409dp"
         android:layout_height="wrap_content"
         android:layout_marginStart="1dp"
