--- a/LevelUp/app/src/main/res/layout/fragment_home.xml
+++ b/LevelUp/app/src/main/res/layout/fragment_home.xml
@@ -76,7 +76,7 @@
                         app:layout_constraintTop_toTopOf="parent" />
 
                     <TextView
-                        android:id="@+id/judul"
+                        android:id="@+id/name"
                         android:layout_width="wrap_content"
                         android:layout_height="wrap_content"
                         android:layout_marginStart="16dp"
@@ -103,8 +103,8 @@
                         android:id="@+id/UpcomingtaskRV"
                         android:layout_width="220dp"
                         android:layout_height="124dp"
-                        app:layout_constraintStart_toStartOf="@+id/judul"
-                        app:layout_constraintTop_toBottomOf="@+id/judul" />
+                        app:layout_constraintStart_toStartOf="@+id/name"
+                        app:layout_constraintTop_toBottomOf="@+id/name" />
                 </androidx.constraintlayout.widget.ConstraintLayout>
             </androidx.cardview.widget.CardView>
 
