--- a/LevelUp/app/src/main/res/layout/activity_reply_discussion.xml
+++ b/LevelUp/app/src/main/res/layout/activity_reply_discussion.xml
@@ -103,14 +103,15 @@
         app:layout_constraintStart_toStartOf="parent">
 
         <androidx.constraintlayout.widget.ConstraintLayout
-            android:layout_width="match_parent"
-            android:layout_height="match_parent">
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content">
 
             <com.google.android.material.textfield.TextInputLayout
                 android:id="@+id/replyinput"
-                android:layout_width="350dp"
+                android:layout_width="330dp"
                 android:layout_height="wrap_content"
-                android:layout_marginTop="-5dp"
+                android:layout_marginTop="-10dp"
+                android:layout_marginBottom="-7dp"
                 app:layout_constraintBottom_toBottomOf="parent"
                 app:layout_constraintEnd_toEndOf="parent"
                 app:layout_constraintStart_toStartOf="parent"
@@ -130,11 +131,14 @@
         android:id="@+id/cardView15"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
+        android:layout_marginStart="2dp"
         android:layout_marginEnd="5dp"
         android:background="#03A9F4"
         app:cardElevation="0dp"
         app:layout_constraintBottom_toBottomOf="@+id/cardView14"
-        app:layout_constraintEnd_toEndOf="parent">
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintStart_toEndOf="@+id/cardView14"
+        app:layout_constraintTop_toTopOf="@+id/cardView14">
 
         <androidx.constraintlayout.widget.ConstraintLayout
             android:layout_width="match_parent"
@@ -142,8 +146,8 @@
 
             <ImageView
                 android:id="@+id/sendreply"
-                android:layout_width="50dp"
-                android:layout_height="50dp"
+                android:layout_width="40dp"
+                android:layout_height="40dp"
                 android:background="#2196F3"
                 android:backgroundTint="#FFFFFF"
                 app:layout_constraintBottom_toBottomOf="parent"
