--- a/LevelUp/app/src/main/res/layout/activity_login.xml
+++ b/LevelUp/app/src/main/res/layout/activity_login.xml
@@ -176,7 +176,7 @@
                 android:layout_marginEnd="16dp"
                 android:backgroundTint="@color/lightbluebg"
                 android:shadowColor="@color/darkbluebg"
-                android:text="Sign In"
+                android:text="Login"
                 android:textSize="24sp"
                 app:cornerRadius="10dp"
                 app:layout_constraintEnd_toEndOf="parent"
@@ -195,7 +195,7 @@
                 android:layout_marginBottom="8dp"
                 android:backgroundTint="@color/white"
                 android:shadowColor="@color/darkbluebg"
-                android:text="Sign Up"
+                android:text="Register"
                 android:textColor="@color/lightbluebg"
                 android:textSize="24sp"
                 app:cornerRadius="10dp"
@@ -240,7 +240,7 @@
         android:layout_marginStart="24dp"
         android:layout_marginTop="70dp"
         android:fontFamily="@font/alfa_slab_one"
-        android:text="Sign In"
+        android:text="Log In"
         android:textColor="#000000"
         android:textSize="34sp"
         android:textStyle="bold"
