--- a/LevelUp/app/src/main/res/layout/activity_main.xml
+++ b/LevelUp/app/src/main/res/layout/activity_main.xml
@@ -236,7 +236,7 @@
                 android:layout_marginEnd="16dp"
                 android:backgroundTint="@color/lightbluebg"
                 android:shadowColor="@color/darkbluebg"
-                android:text="Sign Up"
+                android:text="Register"
                 android:textSize="24sp"
                 app:cornerRadius="10dp"
                 app:layout_constraintEnd_toEndOf="parent"
@@ -255,7 +255,7 @@
                 android:layout_marginBottom="8dp"
                 android:backgroundTint="@color/white"
                 android:shadowColor="@color/darkbluebg"
-                android:text="Sign In"
+                android:text="Login"
                 android:textColor="@color/lightbluebg"
                 android:textSize="24sp"
                 app:cornerRadius="10dp"
@@ -282,7 +282,6 @@
     </androidx.cardview.widget.CardView>
 
 
-
     <TextView
         android:id="@+id/textView"
         android:layout_width="wrap_content"
@@ -290,7 +289,7 @@
         android:layout_marginStart="24dp"
         android:layout_marginTop="70dp"
         android:fontFamily="@font/alfa_slab_one"
-        android:text="Sign Up"
+        android:text="Register"
         android:textColor="#000000"
         android:textSize="34sp"
         android:textStyle="bold"
