--- a/LevelUp/app/src/main/res/layout/fragment_findprojects.xml
+++ b/LevelUp/app/src/main/res/layout/fragment_findprojects.xml
@@ -6,46 +6,41 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:background="@color/lightbluebg"
-    tools:context=".FindprojectsFragment" >
+    tools:context=".FindprojectsFragment">
 
-    <ImageButton
-        android:id="@+id/jobsForYou_searchButton"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:backgroundTint="#00000000"
-        android:minWidth="48dp"
+
+    <SearchView
+        android:id="@+id/searchView"
+        android:layout_width="192dp"
+        android:layout_height="48dp"
+        android:layout_marginStart="24dp"
+        android:layout_marginTop="24dp"
+        android:goIcon="@drawable/ic_baseline_search_24"
+        android:iconifiedByDefault="true"
+        android:layoutDirection="rtl"
+        android:minWidth="72dp"
         android:minHeight="48dp"
-        android:scaleType="centerCrop"
-        android:src="@drawable/ic_baseline_search_24"
-        tools:layout_editor_absoluteX="283dp"
-        tools:layout_editor_absoluteY="8dp" />
+        android:queryBackground="@android:color/transparent"
+        android:queryHint="Search"
+        app:chainUseRtl="false"
+        app:guidelineUseRtl="false"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toTopOf="parent" />
 
     <TextView
         android:id="@+id/jobsForYou_titleFragment"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_marginStart="24dp"
-        android:layout_marginTop="24dp"
         android:text="Jobs For You"
         android:textAlignment="center"
         android:textColor="#FFFFFF"
+        android:textIsSelectable="false"
         android:textSize="24sp"
         android:textStyle="bold"
+        app:layout_constraintBottom_toBottomOf="@+id/searchView"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toTopOf="parent" />
-
-    <androidx.recyclerview.widget.RecyclerView
-        android:id="@+id/rv_jobsforu"
-        android:layout_width="match_parent"
-        android:layout_height="0dp"
-        android:layout_marginStart="24dp"
-        android:layout_marginTop="24dp"
-        android:layout_marginEnd="24dp"
-        android:layout_marginBottom="24dp"
-        app:layout_constraintBottom_toBottomOf="parent"
-        app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/jobsForYou_titleFragment" />
+        app:layout_constraintTop_toTopOf="@+id/searchView" />
 
     <com.google.android.material.floatingactionbutton.FloatingActionButton
         android:id="@+id/floatingActionButton"
@@ -60,5 +55,39 @@
         app:backgroundTint="#001CCC"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent" />
+
+    <androidx.cardview.widget.CardView
+        android:id="@+id/card_rv_jobs"
+        android:layout_width="match_parent"
+        android:layout_height="0dp"
+        android:layout_marginTop="24dp"
+        android:layout_marginBottom="-72dp"
+        app:cardCornerRadius="60dp"
+        app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toBottomOf="@+id/jobsForYou_titleFragment">
+
+        <androidx.constraintlayout.widget.ConstraintLayout
+            android:layout_width="match_parent"
+            android:layout_height="match_parent"
+            android:background="#FFFFFFFF"
+            android:backgroundTint="#FFFFFFFF">
+
+            <androidx.recyclerview.widget.RecyclerView
+                android:id="@+id/rv_jobsforu"
+                android:layout_width="match_parent"
+                android:layout_height="0dp"
+                android:layout_marginStart="24dp"
+                android:layout_marginTop="24dp"
+                android:layout_marginEnd="24dp"
+                android:layout_marginBottom="24dp"
+                app:layout_constraintBottom_toBottomOf="parent"
+                app:layout_constraintEnd_toEndOf="parent"
+                app:layout_constraintStart_toStartOf="parent"
+                app:layout_constraintTop_toTopOf="parent" />
+        </androidx.constraintlayout.widget.ConstraintLayout>
+
+    </androidx.cardview.widget.CardView>
 
 </androidx.constraintlayout.widget.ConstraintLayout>
