--- a/LevelUp/app/src/main/res/layout/input_task_modal.xml
+++ b/LevelUp/app/src/main/res/layout/input_task_modal.xml
@@ -5,6 +5,7 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:background="@drawable/background_putih"
+    android:backgroundTint="@android:color/transparent"
     app:layout_constraintCircleRadius="10dp">
 
     <androidx.cardview.widget.CardView
