--- a/LevelUp/app/src/main/res/layout/fragment_profile.xml
+++ b/LevelUp/app/src/main/res/layout/fragment_profile.xml
@@ -84,7 +84,8 @@
                         android:src="@drawable/ic_launcher_foreground"
                         app:layout_constraintBottom_toBottomOf="parent"
                         app:layout_constraintStart_toStartOf="parent"
-                        app:layout_constraintTop_toTopOf="parent" />
+                        app:layout_constraintTop_toTopOf="parent"
+                        app:srcCompat="@drawable/ic_baseline_person_24" />
 
                     <TextView
                         android:id="@+id/email"
