--- a/LevelUp/app/src/main/res/layout/fragment_home.xml
+++ b/LevelUp/app/src/main/res/layout/fragment_home.xml
@@ -101,8 +101,12 @@
 
                     <androidx.recyclerview.widget.RecyclerView
                         android:id="@+id/UpcomingtaskRV"
-                        android:layout_width="220dp"
-                        android:layout_height="124dp"
+                        android:layout_width="0dp"
+                        android:layout_height="0dp"
+                        android:layout_marginEnd="16dp"
+                        android:layout_marginBottom="4dp"
+                        app:layout_constraintBottom_toBottomOf="parent"
+                        app:layout_constraintEnd_toEndOf="parent"
                         app:layout_constraintStart_toStartOf="@+id/name"
                         app:layout_constraintTop_toBottomOf="@+id/name" />
                 </androidx.constraintlayout.widget.ConstraintLayout>
