--- a/LevelUp/app/src/main/res/layout/input_task_modal.xml
+++ b/LevelUp/app/src/main/res/layout/input_task_modal.xml
@@ -119,22 +119,14 @@
                 android:id="@+id/addtaskb"
                 android:layout_width="300dp"
                 android:layout_height="wrap_content"
-                android:layout_marginTop="5dp"
+                android:layout_marginTop="8dp"
                 android:layout_marginBottom="10dp"
                 android:backgroundTint="#03A9F4"
                 android:text="Add Task"
                 app:layout_constraintBottom_toBottomOf="parent"
                 app:layout_constraintEnd_toEndOf="parent"
                 app:layout_constraintStart_toStartOf="parent"
-                app:layout_constraintTop_toBottomOf="@+id/pickdateb" />
-
-            <Button
-                android:id="@+id/pickdateb"
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:text="Pick Date"
-                app:layout_constraintStart_toStartOf="@+id/textView59"
-                app:layout_constraintTop_toBottomOf="@+id/textView59" />
+                app:layout_constraintTop_toBottomOf="@+id/dateinput" />
 
             <Spinner
                 android:id="@+id/spinner2"
@@ -143,6 +135,21 @@
                 android:layout_marginTop="8dp"
                 app:layout_constraintStart_toStartOf="@+id/textView60"
                 app:layout_constraintTop_toBottomOf="@+id/textView60" />
+
+            <com.google.android.material.textfield.TextInputLayout
+                android:id="@+id/dateinput"
+                android:layout_width="120dp"
+                android:layout_height="wrap_content"
+                android:layout_marginTop="10dp"
+                app:layout_constraintStart_toStartOf="@+id/textView59"
+                app:layout_constraintTop_toBottomOf="@+id/textView59">
+
+                <com.google.android.material.textfield.TextInputEditText
+                    android:id="@+id/dateinputtext"
+                    android:layout_width="match_parent"
+                    android:layout_height="wrap_content"
+                    android:hint="yyyy-mm-dd" />
+            </com.google.android.material.textfield.TextInputLayout>
         </androidx.constraintlayout.widget.ConstraintLayout>
     </androidx.cardview.widget.CardView>
 
