--- a/LevelUp/app/src/main/res/layout/cardview_files.xml
+++ b/LevelUp/app/src/main/res/layout/cardview_files.xml
@@ -7,9 +7,8 @@
 
     <androidx.cardview.widget.CardView
         android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
+        android:layout_height="175dp"
         android:layout_marginStart="15dp"
-        android:layout_marginTop="8dp"
         android:layout_marginEnd="10dp"
         android:layout_marginBottom="8dp"
         android:backgroundTint="#FFFFFF"
