--- a/LevelUp/app/src/main/res/layout/cardview_files.xml
+++ b/LevelUp/app/src/main/res/layout/cardview_files.xml
@@ -6,6 +6,7 @@
     android:layout_height="wrap_content">
 
     <androidx.cardview.widget.CardView
+        android:id="@+id/card"
         android:layout_width="wrap_content"
         android:layout_height="175dp"
         android:layout_marginStart="15dp"
