--- a/LevelUp/app/src/main/res/layout/fragment_home.xml
+++ b/LevelUp/app/src/main/res/layout/fragment_home.xml
@@ -63,17 +63,13 @@
                     android:layout_width="match_parent"
                     android:layout_height="match_parent">
 
-                    <ProgressBar
-                        android:id="@+id/progressBar"
-                        style="?android:attr/progressBarStyle"
+                    <com.github.mikephil.charting.charts.PieChart
+                        android:id="@+id/pieChart"
                         android:layout_width="125dp"
                         android:layout_height="140dp"
-                        android:layout_marginStart="16dp"
-                        android:layout_marginTop="16dp"
-                        android:layout_marginBottom="16dp"
-                        app:layout_constraintBottom_toBottomOf="parent"
+                        android:layout_centerHorizontal="true"
                         app:layout_constraintStart_toStartOf="parent"
-                        app:layout_constraintTop_toTopOf="parent" />
+                        app:layout_constraintTop_toBottomOf="@+id/name" />
 
                     <TextView
                         android:id="@+id/name"
@@ -94,10 +90,11 @@
                         android:text="60%"
                         android:textColor="#000000"
                         android:textSize="20sp"
-                        app:layout_constraintBottom_toBottomOf="@+id/progressBar"
-                        app:layout_constraintEnd_toEndOf="@+id/progressBar"
-                        app:layout_constraintStart_toStartOf="@+id/progressBar"
-                        app:layout_constraintTop_toTopOf="@+id/progressBar" />
+                        app:layout_constraintBottom_toBottomOf="@+id/pieChart"
+                        app:layout_constraintEnd_toEndOf="@+id/pieChart"
+                        app:layout_constraintHorizontal_bias="0.494"
+                        app:layout_constraintStart_toStartOf="parent"
+                        app:layout_constraintTop_toTopOf="@+id/pieChart" />
 
                     <androidx.recyclerview.widget.RecyclerView
                         android:id="@+id/UpcomingtaskRV"
@@ -107,7 +104,7 @@
                         android:layout_marginBottom="4dp"
                         app:layout_constraintBottom_toBottomOf="parent"
                         app:layout_constraintEnd_toEndOf="parent"
-                        app:layout_constraintStart_toStartOf="@+id/name"
+                        app:layout_constraintStart_toEndOf="@+id/pieChart"
                         app:layout_constraintTop_toBottomOf="@+id/name" />
                 </androidx.constraintlayout.widget.ConstraintLayout>
             </androidx.cardview.widget.CardView>
