--- a/LevelUp/app/src/main/res/layout/input_task_modal.xml
+++ b/LevelUp/app/src/main/res/layout/input_task_modal.xml
@@ -128,14 +128,6 @@
                 app:layout_constraintStart_toStartOf="parent"
                 app:layout_constraintTop_toBottomOf="@+id/dateinput" />
 
-            <Spinner
-                android:id="@+id/spinner2"
-                android:layout_width="100dp"
-                android:layout_height="wrap_content"
-                android:layout_marginTop="8dp"
-                app:layout_constraintStart_toStartOf="@+id/textView60"
-                app:layout_constraintTop_toBottomOf="@+id/textView60" />
-
             <com.google.android.material.textfield.TextInputLayout
                 android:id="@+id/dateinput"
                 android:layout_width="120dp"
@@ -149,6 +141,20 @@
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
                     android:hint="yyyy-mm-dd" />
+            </com.google.android.material.textfield.TextInputLayout>
+
+            <com.google.android.material.textfield.TextInputLayout
+                android:id="@+id/taskforinput"
+                android:layout_width="120dp"
+                android:layout_height="wrap_content"
+                app:layout_constraintStart_toStartOf="@+id/textView60"
+                app:layout_constraintTop_toTopOf="@+id/dateinput">
+
+                <com.google.android.material.textfield.TextInputEditText
+                    android:id="@+id/taskforinputtext"
+                    android:layout_width="match_parent"
+                    android:layout_height="wrap_content"
+                    android:hint="Assign to" />
             </com.google.android.material.textfield.TextInputLayout>
         </androidx.constraintlayout.widget.ConstraintLayout>
     </androidx.cardview.widget.CardView>
