--- a/LevelUp/app/src/main/res/layout/activity_enroll_project.xml
+++ b/LevelUp/app/src/main/res/layout/activity_enroll_project.xml
@@ -21,8 +21,8 @@
 
     <ImageView
         android:id="@+id/enroll_logoproject"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
+        android:layout_width="144dp"
+        android:layout_height="144dp"
         android:layout_marginTop="32dp"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
